[gd_scene load_steps=20 format=3 uid="uid://d0yg1xr46lje1"]

[ext_resource type="Script" uid="uid://brm7p6gshbjpu" path="res://Scripts/game_play_scene.gd" id="1_q0gqs"]
[ext_resource type="Texture2D" uid="uid://bkrd4h3hptpd2" path="res://Photos/GamePlayScene.png" id="2_frxao"]
[ext_resource type="FontFile" uid="uid://xcsqkcqh8yb0" path="res://Others/KeyboardFont.TTF" id="3_4jtd1"]
[ext_resource type="FontFile" uid="uid://cgl1uqp4uqud0" path="res://Others/ButtonFont.TTF" id="4_ftlg0"]
[ext_resource type="Texture2D" uid="uid://dyb7wbnvudins" path="res://Photos/Lose.png" id="5_l37oj"]
[ext_resource type="Texture2D" uid="uid://dilfyhoor25sx" path="res://Photos/Win.png" id="6_ydirw"]
[ext_resource type="Texture2D" uid="uid://c1ndfo1gae5nd" path="res://Hearts_GUI/bar_1.png" id="12_uob7q"]
[ext_resource type="Texture2D" uid="uid://b4ahkpp7cbhno" path="res://Hearts_GUI/bar_2.png" id="13_7asqj"]
[ext_resource type="Texture2D" uid="uid://cn4kv3v1y4yvp" path="res://Hearts_GUI/bar_3.png" id="14_xgw85"]
[ext_resource type="Texture2D" uid="uid://cuerutewlmg3r" path="res://Hearts_GUI/bar_4.png" id="15_v0ehj"]
[ext_resource type="Texture2D" uid="uid://f21hcxkj8fth" path="res://Hearts_GUI/bar_5.png" id="16_en5oy"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ftlg0"]
bg_color = Color(0, 0, 0, 1)

[sub_resource type="Theme" id="Theme_a7xop"]

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_3527d"]

[sub_resource type="Theme" id="Theme_3527d"]
default_font_size = 20

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rfioy"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_l37oj"]
bg_color = Color(0.1728327, 0.17283267, 0.17283267, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ydirw"]
bg_color = Color(0.17254902, 0.17254902, 0.17254902, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_frxao"]
bg_color = Color(0.21568628, 0.21568628, 0.21568628, 1)

[node name="GamePlayScene" type="Node2D"]
script = ExtResource("1_q0gqs")

[node name="GamePlayScene" type="Sprite2D" parent="."]
position = Vector2(513, 383)
texture = ExtResource("2_frxao")

[node name="Letters" type="GridContainer" parent="."]
light_mask = 7
offset_left = 96.0
offset_top = 240.0
offset_right = 451.0
offset_bottom = 374.0
size_flags_horizontal = 3
size_flags_vertical = 3
columns = 9

[node name="A" type="Button" parent="Letters"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("3_4jtd1")
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxFlat_ftlg0")
text = "A"

[node name="B" type="Button" parent="Letters"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("3_4jtd1")
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxFlat_ftlg0")
text = "B"

[node name="C" type="Button" parent="Letters"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("3_4jtd1")
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxFlat_ftlg0")
text = "C"

[node name="D" type="Button" parent="Letters"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("3_4jtd1")
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxFlat_ftlg0")
text = "D"

[node name="E" type="Button" parent="Letters"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("3_4jtd1")
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxFlat_ftlg0")
text = "E"

[node name="F" type="Button" parent="Letters"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("3_4jtd1")
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxFlat_ftlg0")
text = "F"

[node name="G" type="Button" parent="Letters"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("3_4jtd1")
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxFlat_ftlg0")
text = "G"

[node name="H" type="Button" parent="Letters"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("3_4jtd1")
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxFlat_ftlg0")
text = "H"

[node name="I" type="Button" parent="Letters"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("3_4jtd1")
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxFlat_ftlg0")
text = "I"

[node name="J" type="Button" parent="Letters"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("3_4jtd1")
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxFlat_ftlg0")
text = "J"

[node name="K" type="Button" parent="Letters"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("3_4jtd1")
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxFlat_ftlg0")
text = "K"

[node name="L" type="Button" parent="Letters"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("3_4jtd1")
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxFlat_ftlg0")
text = "L"

[node name="M" type="Button" parent="Letters"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("3_4jtd1")
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxFlat_ftlg0")
text = "M"

[node name="N" type="Button" parent="Letters"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("3_4jtd1")
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxFlat_ftlg0")
text = "N"

[node name="O" type="Button" parent="Letters"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("3_4jtd1")
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxFlat_ftlg0")
text = "O"

[node name="P" type="Button" parent="Letters"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("3_4jtd1")
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxFlat_ftlg0")
text = "P"

[node name="Q" type="Button" parent="Letters"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("3_4jtd1")
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxFlat_ftlg0")
text = "Q"

[node name="R" type="Button" parent="Letters"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("3_4jtd1")
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxFlat_ftlg0")
text = "R"

[node name="S" type="Button" parent="Letters"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("3_4jtd1")
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxFlat_ftlg0")
text = "S"

[node name="T" type="Button" parent="Letters"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("3_4jtd1")
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxFlat_ftlg0")
text = "T"

[node name="U" type="Button" parent="Letters"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("3_4jtd1")
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxFlat_ftlg0")
text = "U"

[node name="V" type="Button" parent="Letters"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("3_4jtd1")
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxFlat_ftlg0")
text = "V"

[node name="W" type="Button" parent="Letters"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("3_4jtd1")
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxFlat_ftlg0")
text = "W"

[node name="X" type="Button" parent="Letters"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("3_4jtd1")
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxFlat_ftlg0")
text = "X"

[node name="Y" type="Button" parent="Letters"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("3_4jtd1")
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxFlat_ftlg0")
text = "Y"

[node name="Z" type="Button" parent="Letters"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("3_4jtd1")
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxFlat_ftlg0")
text = "Z"

[node name="DayFrame" type="Label" parent="."]
offset_left = 33.0
offset_top = 30.0
offset_right = 122.0
offset_bottom = 80.0
theme = SubResource("Theme_a7xop")
theme_type_variation = &"HeaderLarge"
theme_override_fonts/font = ExtResource("3_4jtd1")
theme_override_font_sizes/font_size = 24
text = "Day 1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="UndoButton" type="Button" parent="."]
offset_left = 104.0
offset_top = 410.0
offset_right = 228.0
offset_bottom = 461.0
theme_override_fonts/font = ExtResource("3_4jtd1")
theme_override_font_sizes/font_size = 22
text = "UNDO
"

[node name="RedoButton" type="Button" parent="."]
offset_left = 310.0
offset_top = 411.0
offset_right = 434.0
offset_bottom = 462.0
theme_override_fonts/font = ExtResource("3_4jtd1")
theme_override_font_sizes/font_size = 22
text = "REDO"

[node name="WordLabel" type="Label" parent="."]
material = SubResource("CanvasItemMaterial_3527d")
offset_left = 32.0
offset_top = 135.0
offset_right = 511.0
offset_bottom = 209.0
theme = SubResource("Theme_3527d")
theme_override_fonts/font = ExtResource("3_4jtd1")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="GuessedLetters" type="Label" parent="."]
offset_left = 104.0
offset_top = 494.0
offset_right = 447.0
offset_bottom = 558.0
theme_override_fonts/font = ExtResource("3_4jtd1")

[node name="LosePanel" type="Panel" parent="."]
visibility_layer = 512
offset_left = 268.0
offset_top = 227.0
offset_right = 758.0
offset_bottom = 541.0
theme_override_styles/panel = SubResource("StyleBoxFlat_rfioy")

[node name="Title" type="Label" parent="LosePanel"]
layout_mode = 0
offset_left = 126.0
offset_top = 51.0
offset_right = 400.0
offset_bottom = 137.0
theme_override_fonts/font = ExtResource("4_ftlg0")

[node name="ContinueButton" type="Button" parent="LosePanel"]
layout_mode = 0
offset_left = 344.0
offset_top = 240.0
offset_right = 446.0
offset_bottom = 274.0
theme_override_fonts/font = ExtResource("4_ftlg0")
theme_override_styles/normal = SubResource("StyleBoxFlat_l37oj")
text = "Continue"

[node name="ReturnMain" type="Button" parent="LosePanel"]
layout_mode = 0
offset_left = 44.0
offset_top = 240.0
offset_right = 250.0
offset_bottom = 275.0
theme_override_fonts/font = ExtResource("4_ftlg0")
theme_override_styles/normal = SubResource("StyleBoxFlat_ydirw")
text = "Return to Main Menu"

[node name="Lose" type="Sprite2D" parent="LosePanel"]
position = Vector2(245, 169.5)
scale = Vector2(1.0799996, 1.1166673)
texture = ExtResource("5_l37oj")

[node name="Win" type="Sprite2D" parent="LosePanel"]
position = Vector2(244.5, 170)
scale = Vector2(1.0600002, 1.1333333)
texture = ExtResource("6_ydirw")

[node name="Dialogue_Panel" type="Panel" parent="."]
offset_left = 191.0
offset_top = 598.0
offset_right = 980.0
offset_bottom = 722.0

[node name="StoryText" type="Label" parent="Dialogue_Panel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -365.5
offset_top = -42.0
offset_right = 368.5
offset_bottom = 58.5
theme_override_fonts/font = ExtResource("3_4jtd1")
theme_override_font_sizes/font_size = 19
autowrap_mode = 2

[node name="Head" type="Sprite2D" parent="."]
visible = false
position = Vector2(972, 55.5)
scale = Vector2(0.63999885, 0.65000004)

[node name="LeftFoot" type="Sprite2D" parent="."]
visible = false
position = Vector2(904.75006, 56)
scale = Vector2(0.6299985, 0.6333334)

[node name="RightHand" type="Sprite2D" parent="."]
visible = false
position = Vector2(706.5, 55.499996)
scale = Vector2(0.6199997, 0.61666656)

[node name="LeftHand" type="Sprite2D" parent="."]
visible = false
position = Vector2(771, 55)
scale = Vector2(0.64000106, 0.6333333)

[node name="RightFoot" type="Sprite2D" parent="."]
visible = false
position = Vector2(837.5, 55.5)
scale = Vector2(0.62000084, 0.6166667)

[node name="CanvasGroup" type="CanvasGroup" parent="."]

[node name="Health1" type="TextureRect" parent="CanvasGroup"]
offset_left = 702.0
offset_top = 30.0
offset_right = 991.0
offset_bottom = 68.0
texture = ExtResource("12_uob7q")
expand_mode = 1

[node name="Health2" type="TextureRect" parent="CanvasGroup"]
offset_left = 702.0
offset_top = 30.0
offset_right = 991.0
offset_bottom = 68.0
texture = ExtResource("13_7asqj")
expand_mode = 1

[node name="Health3" type="TextureRect" parent="CanvasGroup"]
offset_left = 702.0
offset_top = 30.0
offset_right = 991.0
offset_bottom = 68.0
texture = ExtResource("14_xgw85")
expand_mode = 1

[node name="Health4" type="TextureRect" parent="CanvasGroup"]
offset_left = 702.0
offset_top = 30.0
offset_right = 991.0
offset_bottom = 68.0
texture = ExtResource("15_v0ehj")
expand_mode = 1

[node name="Health5" type="TextureRect" parent="CanvasGroup"]
offset_left = 702.0
offset_top = 30.0
offset_right = 991.0
offset_bottom = 68.0
texture = ExtResource("16_en5oy")
expand_mode = 1

[node name="ClueButton" type="Button" parent="."]
offset_left = 832.0
offset_top = 668.0
offset_right = 973.0
offset_bottom = 715.0
theme_override_fonts/font = ExtResource("3_4jtd1")
theme_override_styles/normal = SubResource("StyleBoxFlat_frxao")
text = "Clue"

[connection signal="pressed" from="LosePanel/ReturnMain" to="." method="_on_return_main_pressed"]
[connection signal="pressed" from="ClueButton" to="." method="_on_clue_button_pressed"]
